2.0.5
- a new optimized algorithm for saving multivalue fields on db was implemented

2.0.4
- some small optimizations were done on p4a_db adapter
- a small change was done on products_catologue sample

2.0.3
- a bug with mask's icon was fixed

2.0.2
- P4A_VERSION is now printed in the mask's footer

2.0.1
- a bug with mask's icon was fixed

2.0.0
- P4A_DB_Navigator now automatically call a redesign action

2.0.0-beta4
- a bug on P4A_DB_Source was solved (due to the porting to ADODB)
- P4A_Tab_Pane was nearly rewritten from scratch
- triggered events page on website (http://p4a.sf.net/triggered-events) was updated
- P4A_Frame::anchorCenter() now automatically adds a new row to the frame
- FCKEditor was updated to 2.4.1

2.0.0-beta3
- a small patch to fck file manager connector was added to avoid possible path configuration problems
- P4A_Fieldset title now has a bit more of margin
- P4A_Mask::saveUploads() method was added just to split the P4A_Mask::saveRow() and allow better customization
- a bug with P4A_Table dimensions was solved
- a bug with centering objects was solved
- some work on sidebar_left and sidebar_right was done
- a bug on P4A_Mask_Error was fixed
- a css border was removed from P4A_Fieldset
- a bug with P4A_DB_Navigator was solved
- now file fields are removed while doing ajax submits

2.0.0-beta2
- P4A_AUTO_MAXLENGTH is now disabled by default
- Afrikaans translation was added (thanks to Ewald Horn)
- now we handle when db driver returns "table.field" as field name
- a bug with rich text editor file manager was solved

2.0.0-beta1
- if you use P4A_DB_Source::setQuery now every field become readonly
- a bug with P4A_DB_Source::_composeSelectCountQuery() and UNION queries was solved (thanks to alexiadeath)
- P4A_Tab_Pane CSS is now loaded by default
- P4A_Table::setVisible cols now also manages column order
- a bug on P4A::openPopup() passing javascripts thru an ajax call was solved
- P4A::isPopupOpened() was added